@@ -936,14 +936,12 @@ correct one will be selected before using preseeding.
 
 <informalexample role="example"><screen>
 # If the system has free space you can choose to only partition that space.
-# Note: this must be preseeded with a localized (translated) value.
-#d-i partman-auto/init_automatically_partition \
-#      select Guided - use the largest continuous free space
+#d-i partman-auto/init_automatically_partition select biggest_free
 
 # Alternatively, you can specify a disk to partition. The device name must
 # be given in traditional non-devfs format.
-# For example, to use the first SCSI/SATA hard disk:
 # Note: A disk must be specified, unless the system has only one disk.
+# For example, to use the first SCSI/SATA hard disk:
 #d-i partman-auto/disk string /dev/sda
 # In addition, you'll need to specify the method to use.
 # The presently available methods are: "regular", "lvm" and "crypto"
@@ -958,14 +956,11 @@ d-i parman-md/device_remove_md boolean true
 # And the same goes for the confirmation to write the lvm partitions.
 d-i partman-lvm/confirm boolean true
 
-# You can choose from any of the predefined partitioning recipes.
-# Note: this must be preseeded with a localized (translated) value.
-d-i partman-auto/choose_recipe \
-       select All files in one partition (recommended for new users)
-#d-i partman-auto/choose_recipe \
-#       select Separate /home partition
-#d-i partman-auto/choose_recipe \
-#       select Separate /home, /usr, /var, and /tmp partitions
+# You can choose one of the three predefined partitioning recipes:
+# - atomic: all files in one partition
+# - home:   separate /home partition
+# - multi:  separate /home, /usr, /var, and /tmp partitions
+d-i partman-auto/choose_recipe select atomic
 
 # Or provide a recipe of your own...
 # The recipe format is documented in the file devel/partman-auto-recipe.txt.
@@ -996,8 +991,7 @@ d-i partman-auto/choose_recipe \
 # This makes partman automatically partition without confirmation, provided
 # that you told it what to do using one of the methods above.
 d-i partman/confirm_write_new_label boolean true
-d-i partman/choose_partition \
-       select Finish partitioning and write changes to disk
+d-i partman/choose_partition select finish
 d-i partman/confirm boolean true
 </screen></informalexample>
 
@@ -1068,8 +1062,7 @@ Check <filename>/var/log/syslog</filename> if you run into problems.
 # This makes partman automatically partition without confirmation.
 d-i partman-md/confirm boolean true
 d-i partman/confirm_write_new_label boolean true
-d-i partman/choose_partition \
-       select Finish partitioning and write changes to disk
+d-i partman/choose_partition select finish
 d-i partman/confirm boolean true
 </screen></informalexample>
 
